<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Billify</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="singup">SingUp</string>
    <string name="todo1">TODO</string>
    <string name="toolbar">Menu</string>
    <string name="login">login</string>
    <string name="todo">TODO</string>
    <string name="prompt_password">I don`t know</string>
    <string name="facebook_app_id">194921465130149</string>
    <string name="fb_login_protocol_scheme">fb194921465130149</string>


    <string name="login_button">facebook</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="google_button">google</string>
    <string name="no_birthday_data">No record available</string>
    <string name="no_birthday_found">No record found</string>
    <string name="add_new">New Friend</string>

    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="participates">You and </string>
    <string name="add_exp">Add Expenses</string>

    <string-array name="category_array">

        <item>Category</item>
        <item>Dinner</item>
        <item>Clothes</item>
        <item>Trip</item>

    </string-array>

    <string-array name="paid_array">

        <item>Billed BY</item>
        <item>You</item>
        <item>Multiple</item>

    </string-array>
    <string-array name="group_array">

        <item>Group</item>


    </string-array>
    <string-array name="split_array">

        <item>Split</item>
        <item>Eqally</item>
        <item>Unequally</item>


    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">New Transaction</string>
    <string name="create_group">Create</string>

</resources>
