<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.billify.AddExpenseActivity"
    android:background="#f4f4f4">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/group_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:src="@color/colorPrimary" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/group_image"

                android:layout_centerInParent="true"

                android:background="@color/colorPrimary"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_height="wrap_content" />


            <EditText
                android:layout_width="match_parent"
                android:hint="@string/title"
                android:layout_marginTop="50dp"
                android:id="@+id/title"
                android:layout_below="@id/group_profile"
                android:layout_height="wrap_content">

            </EditText>


            <EditText
                android:layout_width="match_parent"
                android:hint="@string/discription"
                android:id="@+id/discription"
                android:layout_below="@id/title"
                android:layout_height="wrap_content">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/participate"


                android:textColor="@color/edittext"

                android:hint="@string/participates"

                android:layout_height="wrap_content">


            </EditText>

            <LinearLayout
                android:id="@+id/f1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/participate"
                >

                <GridView
                    android:id="@+id/grid1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:text="@string/create_group"
                android:id="@+id/create"
                android:layout_below="@+id/discription"
                android:layout_height="wrap_content">

            </Button>
        </RelativeLayout>

    </ScrollView>



</RelativeLayout>