<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.billify.AddExpenseActivity"
    android:background="#f4f4f4">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:id="@+id/rtl"
            android:layout_height="match_parent">



<FrameLayout
                 android:id="@+id/ef1"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="97dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:autofillHints=""
        android:textCursorDrawable="@null"





        android:background="@drawable/bt_ui">

    </EditText>

    <TextView
        android:layout_width="91dp"

        android:layout_height="match_parent"
        android:background="@drawable/title_bl"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:text="@string/title"
        android:textColor="@color/white"></TextView>

</FrameLayout>



            <Spinner
                android:layout_width="wrap_content"
                android:id="@+id/category"
                android:hint="Category"
                android:layout_below="@id/ef1"
                android:layout_marginTop="20dp"

                android:defaultFocusHighlightEnabled="true"

                android:entries="@array/category_array"
                android:layout_height="wrap_content">

            </Spinner>
     <FrameLayout
         android:id="@+id/ef2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/category"
         android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/participate"
                android:background="@drawable/bt_ui"
                android:paddingLeft="97dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:autofillHints=""
                android:textCursorDrawable="@null"
                 android:layout_height="wrap_content">


            </EditText>



         <TextView
             android:layout_width="91dp"

             android:layout_height="match_parent"
             android:background="@drawable/title_bl"
             android:textAlignment="center"
             android:paddingTop="10dp"
             android:text="@string/participates"
             android:textColor="@color/white"></TextView>


         <LinearLayout
             android:id="@+id/f1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/participate"


             >

             <GridView
                 android:id="@+id/grid1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>

     </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ef3"
                android:layout_below="@id/ef2"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/discription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/bt_ui"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="97dp"
                    android:textCursorDrawable="@null">

                </EditText>

                <TextView
                    android:layout_width="91dp"
                    android:textAlignment="center"
                    android:layout_height="match_parent"
                    android:background="@drawable/title_bl"

                    android:paddingTop="10dp"
                    android:text="@string/discription"
                    android:textColor="@color/white"></TextView>
            </FrameLayout>

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ef4"
               android:layout_below="@id/ef3"
               android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/amount"

                android:inputType="number"
                android:autofillHints=""
                android:background="@drawable/bt_ui"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="97dp"
                android:textCursorDrawable="@null"

                android:layout_height="wrap_content">


            </EditText>
               <TextView
                   android:layout_width="91dp"
                   android:textAlignment="center"
                   android:layout_height="match_parent"
                   android:background="@drawable/title_bl"

                   android:paddingTop="10dp"
                   android:text="@string/amount"
                   android:textColor="@color/white"></TextView>
           </FrameLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:id="@+id/paid"
                android:hint="Category"
                android:layout_below="@id/ef4"
                android:layout_marginTop="20dp"

                android:defaultFocusHighlightEnabled="true"

                android:entries="@array/paid_array"
                android:layout_height="wrap_content">

            </Spinner>


            <Spinner
                android:layout_width="wrap_content"
                android:id="@+id/split"
                android:hint="Category"
                android:layout_below="@id/ef4"

                android:layout_marginTop="20dp"
                android:layout_marginLeft="150dp"
                android:defaultFocusHighlightEnabled="true"

                android:entries="@array/split_array"
                android:layout_height="wrap_content">

            </Spinner>


            <RelativeLayout
                android:layout_width="match_parent"

                android:layout_marginTop="25dp"
                android:gravity="center"
                android:layout_below="@+id/split"
                android:id="@+id/ln1_image"


                android:layout_height="120dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:background="#D9F0DB"
                    android:id="@+id/ln_image"
                    android:layout_height="match_parent">

                </ImageView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:id="@+id/bill_image"

                   android:layout_centerInParent="true"

                    android:background="@color/colorPrimary"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/ln1_image"
                android:id="@+id/add_exp"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:textColor="@color/white"
                android:background="@drawable/button1_ly"
                android:text="@string/add_exp"
               >

            </Button>

            <Button
                android:id="@+id/add_new"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/ln1_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="80dp"
                android:textColor="@color/white"
                android:background="@drawable/button1_ly"
                android:text="@string/add_new">

            </Button>

        </RelativeLayout>


    </ScrollView>



</RelativeLayout>